update html in js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <title>
-    Imersão Dev - Aula 06
+    Tebela de classificação
   </title>
 </head>
 
@@ -13,7 +13,7 @@
   <h1>Tabela de classificação</h1>
 
   <table style="width:100%">
-    <thead>
+      <thead>
      <tr>
         <th>Nome</th>
         <th>Vitórias</th>
@@ -24,6 +24,7 @@
       </tr>
     </thead>
     <tbody id="tabelaJogadores">
+        <!--
       <tr>
         <td>Rangel</td>
         <td>3</td>
@@ -43,8 +44,8 @@
         <td><button onClick="adicionarVitoria()">Vitória</button></td>
         <td><button onClick="adicionarEmpate()">Empate</button></td>
         <td><button onClick="adicionarDerrota()">Derrota</button></td>
-      </tr>
-    </tbody> 
+      </tr> -->
+    </tbody>
   </table>
 </body>
 
