--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<link rel="stylesheet" href="style.css"/>
-<script src="scripts.js"></script>
-
 <html>
-
+  <link rel="stylesheet" href="style.css"/>
+  <script src="scripts.js"></script>
 <head>
   <title>
-    Tebela de classificação
+    Imersão Dev - Aula 06
   </title>
 </head>
 
@@ -13,8 +11,8 @@
   <h1>Tabela de classificação</h1>
 
   <table style="width:100%">
-      <thead>
-     <tr>
+    <thead>
+      <tr>
         <th>Nome</th>
         <th>Vitórias</th>
         <th>Empates</th>
@@ -24,23 +22,22 @@
       </tr>
     </thead>
     <tbody id="tabelaJogadores">
-        <!--
-      <tr>
-        <td>Rangel</td>
-        <td>3</td>
-        <td>0</td>
-        <td>0</td>
-        <td>100</td>
+   <!--   <tr>
+        <td>Paulo</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <td><button onClick="adicionarVitoria()">Vitória</button></td>
         <td><button onClick="adicionarEmpate()">Empate</button></td>
         <td><button onClick="adicionarDerrota()">Derrota</button></td>
       </tr>
       <tr>
-        <td>Gabriela</td>
-        <td>0</td>
-        <td>0</td>
-        <td>3</td>
-        <td>0</td>
+        <td>Rafa</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <td><button onClick="adicionarVitoria()">Vitória</button></td>
         <td><button onClick="adicionarEmpate()">Empate</button></td>
         <td><button onClick="adicionarDerrota()">Derrota</button></td>
